<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/tab"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:id="@+id/llone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageButton
                android:id="@+id/ib1"
                android:padding="6dp"
                android:background="@drawable/unselected_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/btnone"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/your_info"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lltwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageButton
                android:id="@+id/ib2"
                android:padding="6dp"
                android:background="@drawable/unselected_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/btntwo"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/know_about_you"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llthree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageButton
                android:id="@+id/ib3"
                android:padding="6dp"
                android:background="@drawable/unselected_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/btnthree"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/your_risk"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llfour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageButton
                android:id="@+id/ib4"
                android:padding="6dp"
                android:background="@drawable/unselected_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/btnfour"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/your_family"/>
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/nbadge"
        layout="@layout/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tab"/>
    <ImageButton
        android:id="@+id/backword"
        android:background="@drawable/button_left_corners"
        android:layout_centerVertical="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/leftarrow"/>
    <ImageButton
        android:id="@+id/forward"
        android:background="@drawable/button_right_corners"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/rightarrow"/>
    <FrameLayout
        android:id="@+id/action_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/frame_background"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/backword"
        android:layout_below="@+id/tab"
        android:layout_above="@+id/space">
    </FrameLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/space"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:src="@drawable/msg" />
    <com.luseen.spacenavigation.SpaceNavigationView
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        app:space_background_color="@color/colorPrimary"
        app:active_item_color="@color/space_white"
        app:inactive_item_color="@color/white"
        app:centre_button_color="@color/pinkdark"
        app:centre_button_icon="@drawable/settings"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>